--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div>ADD id="Welcome to the world of web development "</div>
+	<div>"Welcome to the world of web development "</div>
 	
 
 
