--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<div>"Welcome to the world of web development"</div>
 </head>
 
 <body>
