--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<div>"Welcome to the world of web development"</div>
+	<div="text">"Welcome to the world of web develoment"</div>
 </head>
 
 <body>
