--- a/main.html
+++ b/main.html
@@ -3,7 +3,9 @@
 <html>
 
 <head>
-	<div="text">"Welcome to the world of web develoment"</div>
+	<div
+		<id>"Welcome to the world of web development"</id>
+	</div>
 </head>
 
 <body>
