--- a/main.html
+++ b/main.html
@@ -3,9 +3,10 @@
 <html>
 
 <head>
-	<div
-		<id>"Welcome to the world of web development"</id>
-	</div>
+	<div= "my div">
+		<h2>Welcome to the world of web development</h2>
+
+	
 </head>
 
 <body>
