--- a/main.html
+++ b/main.html
@@ -3,8 +3,7 @@
 <html>
 
 <head>
-	<div= "my div">
-		<h2>Welcome to the world of web development</h2>
+	<div>"Welcome to the world of web devlopment"</div>
 
 	
 </head>
